# peerguardian

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  ChangeLog  INSTALL  Makefile  Makefile.am  NEWS  README  allow.p2p  blockcontrol  blockcontrol.conf  blockcontrol.default  blockcontrol.defaults  blockcontrol.if-up  blockcontrol.lib  blockcontrol.main  blockcontrol.watchdog  blockcontrol.wd  blocklists.list  configure.ac  cron.daily  default  if-up  init  init-functions  iptables-custom-insert.sh  iptables-custom-remove.sh  logrotate  moblock-control  moblock-control.defaults  moblock-control.lib  shippable.yml
debian/: .gitignore  README.Debian  changelog  config  control  copyright  dirs  docs  install  manpages  pglcmd.dirs  pglcmd.install  pglcmd.postinst.in  pglcmd.postrm  pglcmd.preinst  pglgui.postinst  postinst  postrm  preinst  prerm  prerm.hardy  rules  templates  watch
docs/: BUGS  NEWS  README  README.blocklists  THANKS  TODO  (+7 more)
pgl/: .gitignore  AUTHORS  BUGS  CMakeLists.txt  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  README  README.blocklists  README.pglgui  TODO  aclocal.m4  configure  configure.ac
pgl/debian/: .gitignore  README.Debian  changelog  control  copyright  moblock.config  moblock.templates  pgl-gui.docs  pgl-gui.install  pgl-gui.links  pglcmd.dirs  pglcmd.install  pglcmd.links  pglcmd.postinst  pglcmd.postinst.in  pglcmd.postrm  pglcmd.preinst  pglcmd.templates  pgld.docs  pgld.install  pglgui.docs  pglgui.links  pglgui.postinst  rules  watch
pgl/debian/patches/: series  use-systemwide-LSB-init-functions.patch
pgl/debian/po/: POTFILES.in  templates.pot
pgl/docs/: AUTHORS  BUGS  COPYING  Makefile.am  Makefile.in  README  README.blocklists  README.dbus  README.distributions  README.pgl-gui  THANKS  TODO  pgld.1
pgl/m4/: .gitignore
pgl/pgl-gui/: .gitignore  CMakeLists.txt  INSTALL  Makefile  Makefile.am  Makefile.in  README  pgl-gui.kdev4  pgl-gui.pro  regexps.txt
pgl/pgl-gui.qt/: .gitignore  ChangeLog  Makefile  README  install  mobloquer.pro  pgl-gui.pro  readme  todo
pgl/pgl-gui.qt-old/: ChangeLog
pgl/pgl-gui.qt-old/src/: loghandler.cpp  processhandler.h
pgl/pgl-gui.qt/images/: images.qrc  info.txt
pgl/pgl-gui.qt/other/: Mobloquer.desktop  pgl-gui.desktop  pgl-gui.qt.desktop
pgl/pgl-gui.qt/src/: abstracthandler.h  add_exception_dialog.cpp  add_exception_dialog.h  debug.cpp  file_transactions.cpp  file_transactions.h  filehandler.h  gui_options.cpp  gui_options.h  ip_remove.cpp  ip_remove.h  ip_whitelist.cpp  ip_whitelist.h  list_add.cpp  list_add.h  loghandler.h  main.cpp  moblock_settings.cpp  moblock_settings.h  peerguardian.cpp  peerguardian.h  peerguardian_info.cpp  peerguardian_info.h  peerguardian_log.cpp  peerguardian_log.h  pgl_lists.cpp  pgl_lists.h  pgl_settings.cpp  pgl_settings.h  pgl_whitelist.cpp  pgl_whitelist.h  pglcmd.cpp  pglcmd.h  proc_thread.cpp  proc_thread.h  settings.cpp  settings.h  settings_manager.cpp  settings_manager.h  status_dialog.cpp  (+6 more)
pgl/pgl-gui.qt/ui/: add_exception.ui  ip_remove.ui  ip_whitelist.ui  list_add.ui  main_window.ui  settings.ui  status_dialog.ui  whois.ui
pgl/pgl-gui/images/: LICENSE
pgl/pgl-gui/other/: pgl-gui.desktop
pgl/pgl-gui/src/: CMakeLists.txt  abstracthandler.cpp  abstracthandler.h  add_exception_dialog.cpp  add_exception_dialog.h  command.cpp  debug.h  error_dialog.h  file_transactions.h  filehandler.cpp  filehandler.h  gui_options.cpp  gui_options.h  ip_whitelist.h  list_add.cpp  loghandler.cpp  loghandler.h  main.cpp  moblock_settings.cpp  peerguardian.cpp  peerguardian.h  peerguardian_info.cpp  peerguardian_info.h  peerguardian_log.cpp  peerguardian_log.h  pgl_lists.cpp  pgl_lists.h  pgl_settings.cpp  pgl_whitelist.cpp  pgl_whitelist.h  pglcmd.cpp  pglcmd.h  proc_thread.cpp  proc_thread.h  processhandler.cpp  processhandler.h  rawdata.cpp  rawdata.h  settings.cpp  settings.h  (+9 more)
pgl/pgl-gui/ui/: .gitignore  add_exception.ui  main_window.ui  settings.ui  status_dialog.ui
pgl/pglcmd/: .gitignore  CMakeLists.txt  Makefile  Makefile.am  Makefile.in  allow.p2p  blockcontrol.conf  blockcontrol2pglcmd.sh  blockcontrol2pglcmd.sh.in  blocklists.list  cron.daily  if-up  init  logrotate  pglWhitelist  pglcmd  pglcmd.conf  pglcmd.defaults  pglcmd.defaults.in  pglcmd.in  pglcmd.lib  pglcmd.main  pglcmd.main.in  pglcmd.wd  pglcmd.wd.in  pglwhitelist
pgl/pglcmd/cron.daily/: pglcmd  pglcmd.in
pgl/pglcmd/debian/: .gitignore  changelog  config  control  copyright  manpages  postinst  postrm  preinst  rules  templates  watch
pgl/pglcmd/debian/patches/: 30_ubuntu_hardy.dpatch
pgl/pglcmd/debian/po/: POTFILES.in  templates.pot
pgl/pglcmd/docs/: BUGS  README  README.blocklists  TODO  iptables-custom-insert.sh  iptables-custom-remove.sh  pglcmd.1
pgl/pglcmd/init/: pgl  pgl-update.service.in  pgl.in  pgl.service.in
pgl/pglcmd/networkmanager/: .gitignore  20pglcmd  20pglcmd.in
pgl/pgld/: .gitignore  CMakeLists.txt  Makefile  Makefile.am  Makefile.in  README  dbus-pgld.conf  logrotate  org.netfilter.pgl.conf
pgl/pgld/debian/: .gitignore  changelog  control  copyright  cron.daily  cron.weekly  default  init.d  postinst  postrm  rules
pgl/pgld/src/: .gitignore  CMakeLists.txt  blocklist.c  blocklist.h  dbus.c  dbus.h  dl-blocklistpro.pl  parser.c  parser.h  pgld.c  pgld.h  stream.c  stream.h
pgl/pglgui/: .gitignore  Makefile.am
pgl/pglgui/other/: pglgui.desktop
pgl/pglgui/src/: .gitignore  add_exception_dialog.cpp  add_exception_dialog.h  blocklist.cpp  blocklist.h  blocklist_manager.cpp  blocklist_manager.h  blocklist_p.h  command.h  error_dialog.cpp  file_transactions.cpp  filehandler.h  gui_options.cpp  list_item.cpp  list_item.h  main.cpp  option.cpp  option.h  option_p.h  peerguardian.cpp  peerguardian.h  peerguardian_info.cpp  peerguardian_info.h  pgl_daemon.cpp  pgl_daemon.h  pgl_lists.cpp  pgl_lists.h  pgl_settings.cpp  pgl_settings.h  pgl_whitelist.cpp  pgl_whitelist.h  pglcmd.cpp  pglcmd.h  pglcore.cpp  pglcore.h  pglgui.cpp  pglgui.h  port.cpp  port.h  proc_thread.cpp  (+15 more)
pgl/pglgui/ui/: .gitignore  add_exception.ui  main_window.ui
(+206 files in other folders)
