BLOCKLISTS_DIR = @BLOCKLISTS_DIR@
LOCAL_BLOCKLIST_DIR = @LOCAL_BLOCKLIST_DIR@
MASTER_BLOCKLIST_DIR = @MASTER_BLOCKLIST_DIR@

ACLOCAL_AMFLAGS = -I m4

SUBDIRS = \
	  docs \
	  pglcmd \
	  pgld \
	  $(QT_SUB)

install-data-local:
	@mkdir -p $(DESTDIR)$(MASTER_BLOCKLIST_DIR)
	@mkdir -p $(DESTDIR)$(BLOCKLISTS_DIR)
	@mkdir -p $(DESTDIR)$(LOCAL_BLOCKLIST_DIR)
