BLOCKLISTS_DIR = @BLOCKLISTS_DIR@
LOCAL_BLOCKLIST_DIR = @LOCAL_BLOCKLIST_DIR@
MASTER_BLOCKLIST_DIR = @MASTER_BLOCKLIST_DIR@

ACLOCAL_AMFLAGS = -I m4

SUBDIRS = \
	docs \
	pglcmd \
	pgld \
	$(QT_SUB)


install-data-local:
	@$(INSTALL) -d $(DESTDIR)$(MASTER_BLOCKLIST_DIR)
	@$(INSTALL) -d $(DESTDIR)$(BLOCKLISTS_DIR)
	@$(INSTALL) -d $(DESTDIR)$(LOCAL_BLOCKLIST_DIR)
	@$(INSTALL) -d $(DESTDIR)$(PIDDIR)
	@$(INSTALL) -d $(DESTDIR)$(LOGDIR)
	@$(INSTALL) -d $(DESTDIR)$(TMPDIR)
