man_MANS = pgld.1

install-data-local:
	$(INSTALL_DATA) -D $(abs_srcdir)/iptables-custom-insert.sh \
		$(DESTDIR)$(datadir)/$(PACKAGE_NAME)/examples/iptables-custom-insert.sh
	$(INSTALL_DATA) -D $(abs_srcdir)/iptables-custom-remove.sh \
		$(DESTDIR)$(datadir)/$(PACKAGE_NAME)/examples/iptables-custom-remove.sh
